fixed bugs on firefox, and finally implemented true oekaki features

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -20,7 +20,7 @@ Used:
   width: 0 !important;
   height: 0 !important;
   scroll-behavior: auto;
-  transition: all 0.1s;
+  // transition: all 0.1s;
 }
 
 @mixin zoom {
