--- a/src/scss/components/_oekaki-eve.scss
+++ b/src/scss/components/_oekaki-eve.scss
@@ -101,7 +101,7 @@ Oekaki Canvas
   // width: 1000px;
   // height: 1000px;
   touch-action: none;
-  background: #4a4858;
+  // background: #4a4858;
   transform-origin: center;
   transform: translate(calc(-50% + 50vw), calc(-50% + 50vh));
 }
