--- a/src/scss/components/_youtube-eve.scss
+++ b/src/scss/components/_youtube-eve.scss
@@ -61,7 +61,7 @@ Parent
 
 #add-youtube {
   width: 880px;
-  top: 40px;
+  top: 80px;
   left: calc(50vw - 440px);
 }
 
